<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_favourites"
        android:icon="@drawable/ic_baseline_alt_route_24"
        android:title="@string/favourite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_history"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/history"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_content_provider"
        android:icon="@drawable/ic_baseline_contact_phone_24"
        android:title="@string/contacts"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/my_position"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/map"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/google_maps"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/google_maps"
        app:showAsAction="ifRoom"/>
</menu>